[B]Version 1.1.7[/B]
Txxx network sites: added alphabet filter for models
added: vjav.com
added: shemalez.com
download fixed for: porntrex, javbangers, daftsex
added: xmoviesforyou