@@ -4,3 +4,5 @@ added: vjav.com
 added: shemalez.com
 download fixed for: porntrex, javbangers, daftsex
 added: xmoviesforyou
+fixed: downloaded file name
+fixed: daftsex
